--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>sources_config.yml</include>
                 </includes>
             </resource>
         </resources>
@@ -74,6 +75,18 @@
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.udojava</groupId>
+            <artifactId>EvalEx</artifactId>
+            <!-- change to desired version -->
+            <version>2.7</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
