--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
                     <include>plugin.yml</include>
                     <include>config.yml</include>
                     <include>sources_config.yml</include>
+                    <include>stats_config.yml</include>
                 </includes>
             </resource>
         </resources>
