--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.0.1-jre</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
