Switched from ACF to custom command handler and switch to custom Txt utilities.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,11 +4,11 @@ description: ${project.description}
 author: ${project.author}
 api-version: '1.18'
 main: com.gmail.willramanand.RamSkills.RamSkills
-depend:
 softdepend: [Vault]
 commands:
   skills:
     description: Base command for RamSkills.
+    aliases: [sk]
 permissions:
   skills.xp:
     default: op
